--- a/vagrantfile
+++ b/vagrantfile
@@ -46,6 +46,19 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
   end
 
+  config.vm.provider "hyperv" do |v, override|
+    v.gui = true
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    v.customize ["modifyvm", :id, "--audio", "none"]
+    v.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
+    v.customize ["modifyvm", :id, "--usb", "off"]
+    override.vm.box = "mwrock/Windows2016"
+    override.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
+    override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
+    override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
+    override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
+  end
+
   # this relies on the vagrant-aws & vagrant-winrm-syncedfolders plugins
   config.vm.provider :aws do |aws, override|
     aws.access_key_id = aws_access_key_id
