--- a/vagrantfile
+++ b/vagrantfile
@@ -47,16 +47,13 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   end
 
   config.vm.provider "hyperv" do |v, override|
-    v.gui = true
-    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
-    v.customize ["modifyvm", :id, "--audio", "none"]
-    v.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
-    v.customize ["modifyvm", :id, "--usb", "off"]
-    override.vm.box = "gusztavvargadr/w16s-sql17d"
+    override.vm.box = "gusztavvargadr/w16s-sql17d"   # temporary box url. We'll need to build one eventually
+    config.vm.network "public_network", bridge: "External Connection"
     override.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
     override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
     override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
     override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
+    
   end
 
   # this relies on the vagrant-aws & vagrant-winrm-syncedfolders plugins
