--- a/vagrantfile
+++ b/vagrantfile
@@ -189,7 +189,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   # install 4
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_10_Install4.ps1" 
+    dsc.configuration_file  = "Server_Scenario_10_Install4.ps1"
     dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
@@ -294,7 +294,8 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
       "-ApiKey" => "$ENV:OctopusApiKey",
       "-Environments" => "The-Env",
       "-Roles" => "Test-Tentacle"
-    }  end
+    }
+  end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_07_remove')
 
   # tentacle comms port
@@ -310,5 +311,5 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
       "-Roles" => "Test-Tentacle"
     }  end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_08_tentacle_comms_port')
-  
+
 end
