--- a/vagrantfile
+++ b/vagrantfile
@@ -19,6 +19,20 @@ $run_test_scenario_script = <<SCRIPT
   exit $LASTEXITCODE
 SCRIPT
 
+def run_scenario(config, scenario, configuration_params = nil)
+  config.vm.provision "shell", inline: "write-output \"##teamcity[blockOpened name='Running Scenario #{scenario}']\""
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "#{scenario}.ps1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
+    dsc.manifests_path = "Tests/Scenarios"
+    dsc.abort_on_dsc_failure = true
+    dsc.configuration_params = configuration_params unless configuration_params.nil?
+  end
+  config.vm.provision "shell", inline: "write-output \"##teamcity[blockClosed name='Running Scenario #{scenario}']\""
+
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', scenario.downcase)
+end
+
 Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   hostname = "vagrantdsc.local"
@@ -107,209 +121,90 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   config.vm.provision "file", source: "OctopusDSC", destination: 'C:\Windows\System32\WindowsPowerShell\v1.0\modules\OctopusDSC'
 
   # Run DSC to install server
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_01_Install.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_01_install')
+  run_scenario(config, 'Server_Scenario_01_Install')
 
   # remove the server
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_02_Remove.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_02_remove')
+  run_scenario(config, 'Server_Scenario_02_Remove')
 
   # Run DSC to install server with a custom instance name
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_03_Install_Custom_Instance.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_03_install_custom_instance')
+  run_scenario(config, 'Server_Scenario_03_Install_Custom_Instance')
 
   # remove the server with a custom instance name
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_04_Remove_Custom_Instance.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_04_remove_custom_instance')
+  run_scenario(config, 'Server_Scenario_04_Remove_Custom_Instance')
 
   # re-install old version
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_05_Reinstall.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_05_reinstall')
+  run_scenario(config, 'Server_Scenario_05_Reinstall')
 
   # upgrade to the latest
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_06_Upgrade.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_06_upgrade')
+  run_scenario(config, 'Server_Scenario_06_Upgrade')
 
   # install watchdog
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_07_Watchdog_Create.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_07_watchdog_create')
+  run_scenario(config, 'Server_Scenario_07_Watchdog_Create')
 
   # delete watchdog
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_08_Watchdog_Delete.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_08_watchdog_delete')
+  run_scenario(config, 'Server_Scenario_08_Watchdog_Delete')
 
   # remove again prior to installing 4
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_09_Remove.ps1" 
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_09_Remove')
+  run_scenario(config, 'Server_Scenario_09_Remove')
 
-  # install 4
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_10_Install4.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_10_Install4')
+  # install v4
+  run_scenario(config, 'Server_Scenario_10_Install4')
 
   config.vm.provision "shell", path: "Tests/configure-octopus-for-tentacle-tests.ps1"
 
   # initial tentacle install
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_01_Install.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-    dsc.configuration_params = {
-      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-      "-ApiKey" => "$ENV:OctopusApiKey",
-      "-Environments" => "The-Env",
-      "-Roles" => "Test-Tentacle",
-      "-ServerThumbprint" => "$ENV:OctopusServerThumbprint"
-    }
-  end
+  run_scenario(config, 'Tentacle_Scenario_01_Install', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+                                                        "-ApiKey" => "$ENV:OctopusApiKey",
+                                                        "-Environments" => "The-Env",
+                                                        "-Roles" => "Test-Tentacle",
+                                                        "-ServerThumbprint" => "$ENV:OctopusServerThumbprint" })
   config.vm.provision "shell", inline: "& c:\\temp\\Tests\\register-polling-tentacle.ps1; exit $LASTEXITCODE"
   config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_01_install')
 
   # uninstall tentacle
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_02_Remove.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-    dsc.configuration_params = {
-      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-      "-ApiKey" => "$ENV:OctopusApiKey",
-      "-Environments" => "The-Env",
-      "-Roles" => "Test-Tentacle",
-      "-ServerThumbprint" => "$ENV:OctopusServerThumbprint"
-    }
-  end
+  run_scenario(config, 'Tentacle_Scenario_02_Remove', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+                                                       "-ApiKey" => "$ENV:OctopusApiKey",
+                                                       "-Environments" => "The-Env",
+                                                       "-Roles" => "Test-Tentacle",
+                                                       "-ServerThumbprint" => "$ENV:OctopusServerThumbprint" })
   config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_02_remove')
 
   # Install old version
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_03_Reinstall.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-    dsc.configuration_params = {
-      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-      "-ApiKey" => "$ENV:OctopusApiKey",
-      "-Environments" => "The-Env",
-      "-Roles" => "Test-Tentacle"
-    }
-  end
+  run_scenario(config, 'Tentacle_Scenario_03_Reinstall', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+                                                          "-ApiKey" => "$ENV:OctopusApiKey",
+                                                          "-Environments" => "The-Env",
+                                                          "-Roles" => "Test-Tentacle" })
   config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_03_reinstall')
 
   # Upgrade it
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_04_Upgrade.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-    dsc.configuration_params = {
-      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-      "-ApiKey" => "$ENV:OctopusApiKey",
-      "-Environments" => "The-Env",
-      "-Roles" => "Test-Tentacle"
-    }
-  end
+  run_scenario(config, 'Tentacle_Scenario_04_Upgrade', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+                                                        "-ApiKey" => "$ENV:OctopusApiKey",
+                                                        "-Environments" => "The-Env",
+                                                        "-Roles" => "Test-Tentacle" })
   config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_04_upgrade')
 
   # install watchdog
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_05_Watchdog_Create.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_05_watchdog_create')
+  run_scenario(config, 'Tentacle_Scenario_05_Watchdog_Create')
 
   # delete watchdog
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_06_Watchdog_Delete.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-  end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_06_watchdog_delete')
+  run_scenario(config, 'Tentacle_Scenario_06_Watchdog_Delete')
 
   # remove in preparation for testing comms port
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_07_Remove.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-    dsc.configuration_params = {
-      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-      "-ApiKey" => "$ENV:OctopusApiKey",
-      "-Environments" => "The-Env",
-      "-Roles" => "Test-Tentacle"
-    }
-  end
+  run_scenario(config, 'Tentacle_Scenario_07_Remove', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+                                                       "-ApiKey" => "$ENV:OctopusApiKey",
+                                                       "-Environments" => "The-Env",
+                                                       "-Roles" => "Test-Tentacle" })
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_07_remove')
 
   # tentacle comms port
-  config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Tentacle_Scenario_08_TentacleCommsPort.ps1"
-    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
-    dsc.abort_on_dsc_failure = true
-    dsc.configuration_params = {
-      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
-      "-ApiKey" => "$ENV:OctopusApiKey",
-      "-Environments" => "The-Env",
-      "-Roles" => "Test-Tentacle"
-    }  end
+  run_scenario(config, 'Tentacle_Scenario_08_TentacleCommsPort', {"-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+                                                                  "-ApiKey" => "$ENV:OctopusApiKey",
+                                                                  "-Environments" => "The-Env",
+                                                                  "-Roles" => "Test-Tentacle" })
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_08_tentacle_comms_port')
 
 end
