Partial commit, moving to a different dev machine

--- a/vagrantfile
+++ b/vagrantfile
@@ -133,7 +133,10 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # Run DSC to install server
   run_octopus_scenario(config, 'Server_Scenario_01_Install')
 
-  # remove the server
+  # Run DSC to install second HA node
+  run_octopus_scenario(config, 'Server_Scenario_01_InstallSecondNode')
+
+  # remove the server(s)
   run_octopus_scenario(config, 'Server_Scenario_02_Remove')
 
   # Run DSC to install server with a custom instance name
