--- a/vagrantfile
+++ b/vagrantfile
@@ -74,6 +74,8 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   config.vm.provider "hyperv" do |v, override|
     override.vm.box = "gusztavvargadr/w16s-sql17d"   # temporary box url. We'll need to build one eventually
     config.vm.network "public_network", bridge: "External Connection"
+    
+    override.vm.synced_folder ".", "/vagrant", type: "smb", smb_host: "192.168.1.3" # this is required or it guesses the wrong IP
     override.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
     override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
     override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
