--- a/vagrantfile
+++ b/vagrantfile
@@ -71,13 +71,16 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
   end
 
-  config.vm.provider "hyperv" do |v, override|
-    override.vm.box = "gusztavvargadr/w16s-sql17d"   # temporary box url. We'll need to build one eventually
-    config.vm.network "public_network", bridge: "External Connection"
-    override.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
-    override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
-    override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
-    override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
+  if Vagrant::Util::Platform.windows? then
+    config.vm.provider "hyperv" do |v, override|
+      override.vm.box = "gusztavvargadr/w16s-sql17d"   # temporary box url. We'll need to build one eventually
+      config.vm.network "public_network", bridge: "External Connection"
+      override.vm.synced_folder ".", "/vagrant", type: "smb", smb_host: "192.168.1.3" # this is required or it guesses the wrong IP
+      override.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
+      override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
+      override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
+      override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
+    end
   end
 
   # this relies on the vagrant-aws & vagrant-winrm-syncedfolders plugins
@@ -130,11 +133,19 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # in theory, we shouldn't have to do this - the vagrant-dsc should upload it automatically, but cant get it to work
   config.vm.provision "file", source: "OctopusDSC", destination: 'C:\Windows\System32\WindowsPowerShell\v1.0\modules\OctopusDSC'
 
+  config.vm.provision "shell", path: "Tests/configure-dsc-local-configuration-manager.ps1"
+
   # Run DSC to install server
   run_octopus_scenario(config, 'Server_Scenario_01_Install')
 
-  # remove the server
+  # Run DSC to install second HA node
+  run_octopus_scenario(config, 'Server_Scenario_01_InstallSecondNode')
+
+  # remove the first node
   run_octopus_scenario(config, 'Server_Scenario_02_Remove')
+
+  # remove the second ode
+  run_octopus_scenario(config, 'Server_Scenario_02_RemoveSecondNode')
 
   # Run DSC to install server with a custom instance name
   run_octopus_scenario(config, 'Server_Scenario_03_Install_Custom_Instance')
