Spike to see if using SSD disks is faster

--- a/vagrantfile
+++ b/vagrantfile
@@ -97,6 +97,11 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     aws.subnet_id = aws_subnet_id
     aws.associate_public_ip = true
     aws.user_data = File.read("Tests/aws_user_data.ps1")
+    aws.block_device_mapping = [{
+      'DeviceName' => '/dev/sda1',
+      'Ebs.VolumeType' => 'gp2', #SSD
+      'Ebs.DeleteOnTermination' => 'true'
+    }]
     override.vm.box = "OctopusDeploy/dsc-test-server-windows-2012-r2" #box added via launcher script
     override.ssh.private_key_path = "./#{aws_key_name}.pem"
     override.winrm.username = "Administrator"
