--- a/vagrantfile
+++ b/vagrantfile
@@ -97,6 +97,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     aws.subnet_id = aws_subnet_id
     aws.associate_public_ip = true
     aws.user_data = File.read("Tests/aws_user_data.ps1")
+    aws.ebs_optimized = true
     aws.block_device_mapping = [{
       'DeviceName' => '/dev/sda1',
       'Ebs.VolumeType' => 'gp2', #SSD
