Add test to go from installed to configured
To test the process, but its also needed for the subsequent tentacle tests

--- a/vagrantfile
+++ b/vagrantfile
@@ -174,8 +174,11 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # remove again prior to testing "install only"
   run_octopus_scenario(config, 'Server_Scenario_13_Remove')
 
-  # install onlt without configure
+  # install only without configure
   run_octopus_scenario(config, 'Server_Scenario_14_Install_Without_Configure')
+
+  # go from installed to configured
+  run_octopus_scenario(config, 'Server_Scenario_15_Configure_Preinstalled_Instance')
 
   config.vm.provision "shell", path: "Tests/configure-octopus-for-tentacle-tests.ps1"
 
