--- a/vagrantfile
+++ b/vagrantfile
@@ -48,7 +48,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   hostname = "vagrantdsc.local"
   config.vm.guest = :windows
-  config.vm.communicator = "winrm"
+  config.vm.communicator = :winrm
 
   config.vm.allowed_synced_folder_types = [:winrm]
   config.vm.synced_folder ".", "/vagrant", disabled: true
