--- a/vagrantfile
+++ b/vagrantfile
@@ -24,7 +24,7 @@ def run_octopus_scenario(config, scenario, configuration_params = nil)
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "#{scenario}.ps1"
     dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
+    dsc.manifests_path = "Tests/Scenarios/"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = configuration_params unless configuration_params.nil?
   end
@@ -38,7 +38,7 @@ def run_tentacle_scenario(config, scenario, configuration_params = nil)
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "#{scenario}.ps1"
     dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
-    dsc.manifests_path = "Tests/Scenarios"
+    dsc.manifests_path = "Tests/Scenarios/"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = configuration_params unless configuration_params.nil?
   end
@@ -79,6 +79,9 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     config.vm.provider "hyperv" do |v, override|
       override.vm.box = "gusztavvargadr/w16s-sql17d"   # temporary box url. We'll need to build one eventually
       config.vm.network "public_network", bridge: "External Connection"
+      v.memory = 4096
+      v.maxmemory = 4096
+      v.cpus = 2
       override.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
       override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
       override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
