--- a/vagrantfile
+++ b/vagrantfile
@@ -96,7 +96,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     aws.access_key_id = aws_access_key_id
     aws.secret_access_key = aws_secret_access_key
     aws.region = "ap-southeast-2"
-    aws.instance_type = "m5.large"
+    aws.instance_type = "t2.large"
     aws.keypair_name = "#{aws_key_name}"
     aws.tags = {
       'Name' => 'Vagrant DSC testing'
